updated plot dimensions

--- a/glx_ridership_map.ipynb
+++ b/glx_ridership_map.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🚇 Green Line Extension Ridership Map\n",
+    "# Green Line Extension Ridership Map\n",
     "\n",
-    "Interactive metro-style visualization showing average daily ridership by station across 2023-2025.\n",
+    "Interactive metro-style visualization showing average daily ridership by station across 2023-2025. Science Park/West End and Lechmere are included as points of reference that existed prior to the GLX project. \n",
+    "\n",
+    "**NOTE:** There have been a TON of partial and full shutdowns of the GLX since its opening. This was particularly true in 2024 and parts of 2025. Therefore it's really difficult to get a sense of the change over time across years. That said, using the three years together, we can at least get a sense for which stations see higher ridership than others on the line. 2026 Will be a very interesting year as we (fingers crossed) shouldn't see the same level of disruptions.\n",
+    "\n",
+    "**Second Note:** The MBTA provided upper and lower estimates for average daily ridership numbers by month. It's unclear if this includes weekends or only weekdays. It's also a certainty that these numbers are underreported, because there are no faregates on the line. The methodology used to obtain these numbers was not given. All that said, I decided to use the upper estimate for all measurements.\n",
     "\n",
     "**Features:**\n",
     "- Stacked circles per station (one per year)\n",
@@ -16,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis ')' does not match opening parenthesis '{' on line 19 (524442174.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[139]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m'Medford/Tufts': (7.5), 0)\u001b[39m\n                             ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m closing parenthesis ')' does not match opening parenthesis '{' on line 19\n"
+     ]
+    }
+   ],
    "source": [
     "# Define station order following the GLX line geography\n",
     "# Main trunk from downtown, then branching\n",
@@ -83,14 +96,14 @@
     "    #'Government Center': (0, 0),\n",
     "    #'Haymarket': (1.5, 0),\n",
     "    #'North Station': (0, 0),\n",
-    "    'Science Park/West End': (0, 0),\n",
-    "    'Lechmere': (1.5, 0),\n",
-    "    'Union Square': (3, -1.2),      # Branch down\n",
-    "    'East Somerville': (3, 0),\n",
-    "    'Gilman Square': (4.5, 0),\n",
-    "    'Magoun Square': (6, 0),\n",
-    "    'Ball Square': (7.5, 0),\n",
-    "    'Medford/Tufts': (9, 0)\n",
+    "    'Science Park/West End': (-1.5, 0),\n",
+    "    'Lechmere': (0, 0),\n",
+    "    'Union Square': (1.5, -1.2),      # Branch down\n",
+    "    'East Somerville': (1.5, 0),\n",
+    "    'Gilman Square': (3, 0),\n",
+    "    'Magoun Square': (4.5, 0),\n",
+    "    'Ball Square': (6, 0),\n",
+    "    'Medford/Tufts': (7.5), 0)\n",
     "}\n",
     "\n",
     "# Years and their colors\n",
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,28 +384,28 @@
     "            bordercolor='#00843D',\n",
     "            borderwidth=1,\n",
     "            font=dict(color='#333333'),                                   \n",
-    "            x=0.85,\n",
+    "            x=0.95,\n",
     "            y=0.98,\n",
     "            xanchor='right',\n",
     "            yanchor='top'\n",
     "        ),\n",
-    "        xaxis=dict(\n",
-    "            showgrid=False,\n",
-    "            showticklabels=False,\n",
-    "            zeroline=False,\n",
-    "            range=[0, 12]\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            showgrid=False,\n",
-    "            showticklabels=False,\n",
-    "            zeroline=False,\n",
-    "            scaleanchor='x',\n",
-    "            scaleratio=1,\n",
-    "            range=[-4, 3.5]\n",
-    "        ),\n",
-    "        width=1100,\n",
-    "        height=550,\n",
-    "        margin=dict(l=20, r=20, t=100, b=40),\n",
+    "    xaxis=dict(\n",
+    "        showgrid=False,\n",
+    "        showticklabels=False,\n",
+    "        zeroline=False,\n",
+    "        range=[-2.5, 12]\n",
+    "),\n",
+    "    yaxis=dict(\n",
+    "        showgrid=False,\n",
+    "        showticklabels=False,\n",
+    "        zeroline=False,\n",
+    "        # scaleanchor='x',\n",
+    "        # scaleratio=1,\n",
+    "        range=[-4, 3.5]  # tighten from [-4, 3.5]\n",
+    "    ),\n",
+    "    width=900,\n",
+    "    height=500,  \n",
+    "    margin=dict(l=20, r=20, t=80, b=20),\n",
     "        hoverlabel=dict(\n",
     "            bgcolor='rgba(0,0,0,0.9)',\n",
     "            bordercolor='#00843D',\n",
@@ -405,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -4490,7 +4503,7 @@
         "font": {
          "color": "white"
         },
-        "height": 550,
+        "height": 500,
         "hoverlabel": {
          "bgcolor": "rgba(0,0,0,0.9)",
          "bordercolor": "#00843D",
@@ -4512,16 +4525,16 @@
           },
           "text": "<b>Year</b>"
          },
-         "x": 0.85,
+         "x": 0.95,
          "xanchor": "right",
          "y": 0.98,
          "yanchor": "top"
         },
         "margin": {
-         "b": 40,
+         "b": 20,
          "l": 20,
          "r": 20,
-         "t": 100
+         "t": 80
         },
         "paper_bgcolor": "#ffffff",
         "plot_bgcolor": "#ffffff",
@@ -6810,10 +6823,10 @@
           "yanchor": "top"
          }
         ],
-        "width": 1100,
+        "width": 900,
         "xaxis": {
          "range": [
-          0,
+          -2.5,
           12
          ],
          "showgrid": false,
@@ -6825,8 +6838,6 @@
           -4,
           3.5
          ],
-         "scaleanchor": "x",
-         "scaleratio": 1,
          "showgrid": false,
          "showticklabels": false,
          "zeroline": false
@@ -7838,7 +7849,128 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Daily Ridership by Station and Year:\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2023 Avg</th>\n",
+       "      <th>2024 Avg</th>\n",
+       "      <th>2025 Avg</th>\n",
+       "      <th>Change 2023→2025</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>station</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Science Park/West End</th>\n",
+       "      <td>700</td>\n",
+       "      <td>833</td>\n",
+       "      <td>692</td>\n",
+       "      <td>-1.2%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lechmere</th>\n",
+       "      <td>2275</td>\n",
+       "      <td>1775</td>\n",
+       "      <td>1583</td>\n",
+       "      <td>-30.4%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Union Square</th>\n",
+       "      <td>2183</td>\n",
+       "      <td>967</td>\n",
+       "      <td>967</td>\n",
+       "      <td>-55.7%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>East Somerville</th>\n",
+       "      <td>283</td>\n",
+       "      <td>317</td>\n",
+       "      <td>308</td>\n",
+       "      <td>8.8%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gilman Square</th>\n",
+       "      <td>1458</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>1617</td>\n",
+       "      <td>10.9%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Magoun Square</th>\n",
+       "      <td>958</td>\n",
+       "      <td>875</td>\n",
+       "      <td>825</td>\n",
+       "      <td>-13.9%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ball Square</th>\n",
+       "      <td>942</td>\n",
+       "      <td>792</td>\n",
+       "      <td>742</td>\n",
+       "      <td>-21.2%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medford/Tufts</th>\n",
+       "      <td>1208</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>1175</td>\n",
+       "      <td>-2.8%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       2023 Avg  2024 Avg  2025 Avg Change 2023→2025\n",
+       "station                                                             \n",
+       "Science Park/West End       700       833       692            -1.2%\n",
+       "Lechmere                   2275      1775      1583           -30.4%\n",
+       "Union Square               2183       967       967           -55.7%\n",
+       "East Somerville             283       317       308             8.8%\n",
+       "Gilman Square              1458      1983      1617            10.9%\n",
+       "Magoun Square               958       875       825           -13.9%\n",
+       "Ball Square                 942       792       742           -21.2%\n",
+       "Medford/Tufts              1208      1592      1175            -2.8%"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Summary table: yearly averages by station\n",
     "summary = df.groupby(['station', 'year'])['ridership'].mean().unstack()\n",
@@ -7852,17 +7984,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export to standalone HTML (optional)\n",
-    "fig.write_html('glx_ridership_map.html', include_plotlyjs='cdn')\n",
-    "print(\"Saved interactive map to: glx_ridership_map.html\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7872,7 +7993,7 @@
     "- Circle size represents upperbound average daily ridership\n",
     "- Use the dropdown menu (top-left) to switch between yearly average and individual months\n",
     "- Hover over circles to see detailed ridership data\n",
-    "- Data source: MBTA GLX Ridership Data (2023-2025)"
+    "- Data source: MBTA GLX Ridership Data (2023-2025) (obtained through records request from MBTA)"
    ]
   }
  ],
