--- a/glx_ridership_map.ipynb
+++ b/glx_ridership_map.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
     "    'Gilman Square': (3, 0),\n",
     "    'Magoun Square': (4.5, 0),\n",
     "    'Ball Square': (6, 0),\n",
-    "    'Medford/Tufts': (7.5), 0)\n",
+    "    'Medford/Tufts': (7.5, 0)\n",
     "}\n",
     "\n",
     "# Years and their colors\n",
