added prose to the plots

--- a/glx_ridership_map.ipynb
+++ b/glx_ridership_map.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -6855,7 +6855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -7838,7 +7838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -7957,7 +7957,7 @@
        "Medford/Tufts              1208      1592      1175            -2.8%"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7986,6 +7986,96 @@
     "- Hover over circles to see detailed ridership data\n",
     "- Data source: MBTA GLX Ridership Data (2023-2025) (obtained through records request from MBTA)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Render"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('index.html', 'w') as f:\n",
+    "#     f.write('<html><head><title>GLX Ridership</title></head><body>')\n",
+    "#     f.write('<h1>Green Line Extension Ridership</h1>')\n",
+    "#     f.write(fig.to_html(full_html=False, include_plotlyjs='cdn'))\n",
+    "#     f.write(fig_line.to_html(full_html=False, include_plotlyjs=False))\n",
+    "#     f.write('</body></html>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import markdown\n",
+    "\n",
+    "intro_md = \"\"\"\n",
+    "# Green Line Extension Ridership Map\n",
+    "\n",
+    "Interactive metro-style visualization showing average daily ridership by station across 2023-2025. Science Park/West End and Lechmere are included as points of reference that existed prior to the GLX project. \n",
+    "\n",
+    "**NOTE:** There have been a TON of partial and full shutdowns of the GLX since its opening. This was particularly true in 2024 and parts of 2025. Therefore it's really difficult to get a sense of the change over time across years. That said, using the three years together, we can at least get a sense for which stations see higher ridership than others on the line. 2026 Will be a very interesting year as we (fingers crossed) shouldn't see the same level of disruptions.\n",
+    "\n",
+    "**Second Note:** The MBTA provided upper and lower estimates for average daily ridership numbers by month. It's unclear if this includes weekends or only weekdays. It's also a certainty that these numbers are underreported, because there are no faregates on the line. The methodology used to obtain these numbers was not given. All that said, I decided to use the upper estimate for all measurements.\n",
+    "\n",
+    "**Features:**\n",
+    "- Stacked circles per station (one per year)\n",
+    "- Circle size = ridership volume\n",
+    "- Dropdown to switch between yearly average and individual months\n",
+    "\"\"\"\n",
+    "intro_html = markdown.markdown(intro_md)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('index.html', 'w') as f:\n",
+    "    f.write('''<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <title>GLX Ridership Map</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            font-family: -apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, sans-serif;\n",
+    "            max-width: 1200px;\n",
+    "            margin: 0 auto;\n",
+    "            padding: 20px;\n",
+    "            color: #333;\n",
+    "            line-height: 1.6;\n",
+    "        }\n",
+    "        h1 {\n",
+    "            color: #00843D;\n",
+    "        }\n",
+    "        h2 {\n",
+    "            color: #00843D;\n",
+    "            margin-top: 40px;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "''')\n",
+    "    f.write(intro_html)\n",
+    "    f.write('<h2>Station Ridership Map</h2>')\n",
+    "    f.write(fig.to_html(full_html=False, include_plotlyjs='cdn'))\n",
+    "    f.write('<h2>Total Monthly Ridership</h2>')\n",
+    "    f.write(fig_line.to_html(full_html=False, include_plotlyjs=False))\n",
+    "    f.write('</body></html>')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
