--- a/glx_ridership_map.ipynb
+++ b/glx_ridership_map.ipynb
@@ -8010,7 +8010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8026,9 +8026,9 @@
     "**Second Note:** The MBTA provided upper and lower estimates for average daily ridership numbers by month. It's unclear if this includes weekends or only weekdays. It's also a certainty that these numbers are underreported, because there are no faregates on the line. The methodology used to obtain these numbers was not given. All that said, I decided to use the upper estimate for all measurements.\n",
     "\n",
     "**Features:**\n",
-    "- Stacked circles per station (one per year)\n",
-    "- Circle size = ridership volume\n",
-    "- Dropdown to switch between yearly average and individual months\n",
+    "-Stacked circles per station (one per year)\n",
+    "-Circle size = ridership volume\n",
+    "-Dropdown to switch between yearly average and individual months\n",
     "\"\"\"\n",
     "intro_html = markdown.markdown(intro_md)"
    ]
@@ -8065,9 +8065,9 @@
     "<body>\n",
     "''')\n",
     "    f.write(intro_html)\n",
-    "    f.write('<h2>Station Ridership Map</h2>')\n",
+    "    f.write('<h2>Station Daily Ridership Map</h2>')\n",
     "    f.write(fig.to_html(full_html=False, include_plotlyjs='cdn'))\n",
-    "    f.write('<h2>Total Monthly Ridership</h2>')\n",
+    "    f.write('<h2>Total Daily Ridership by Month</h2>')\n",
     "    f.write(fig_line.to_html(full_html=False, include_plotlyjs=False))\n",
     "    f.write('</body></html>')"
    ]
