--- a/glx_ridership_map.ipynb
+++ b/glx_ridership_map.ipynb
@@ -8019,7 +8019,7 @@
     "intro_md = \"\"\"\n",
     "# Green Line Extension Ridership Map\n",
     "\n",
-    "Interactive metro-style visualization showing average daily ridership by station across 2023-2025. Science Park/West End and Lechmere are included as points of reference that existed prior to the GLX project. \n",
+    "This is an interactive metro-style visualization showing average daily ridership by station across 2023-2025. Science Park/West End and Lechmere are included as points of reference that existed prior to the GLX project. The data were acquired by public records request from the MBTA. Raw data can be found in the CSV file in the associated Github repository found here: [link](https://github.com/dtatarak/mbta_glx_ridership)\n",
     "\n",
     "**NOTE:** There have been a TON of partial and full shutdowns of the GLX since its opening. This was particularly true in 2024 and parts of 2025. Therefore it's really difficult to get a sense of the change over time across years. That said, using the three years together, we can at least get a sense for which stations see higher ridership than others on the line. 2026 Will be a very interesting year as we (fingers crossed) shouldn't see the same level of disruptions.\n",
     "\n",
